# smoothcache

./: .gitignore  README.md  pyproject.toml  t.py
.github/workflows/: main.yaml
smoothcache/: __init__.py  smooth.py
tests/: test.py
