[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smoothcache"
version = "0.0.1"
authors = [
  { name="Mason Weaver", email="mason@swingproxy.com" },
]
description = "Simple, in-memory, thread-safe caching system for python programs."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]